examples/compiler_errors/exposing/exposing_unknown_member.flx
// expect: compile_error
// expect-error: E421
// expect-error: E004

import ExposingTarget exposing (nonexistent)

fn main() with IO {
    print(nonexistent())
}
